# Pincerna

./: .gitignore  CONTRIBUTING.md  README.md  test_find.sh
.github/workflows/: ci.yml
deploy/: CLOUDFLARE_DNS01.md  add_vpn_peer.sh  autodeploy_cloudflared.sh  build_backend.sh  cloudflare.ini.template  force_fresh_start.sh  install.sh  install_git_hook.sh  pincerna.service  pincerna.service.example  pincerna_cpp.service  post-merge.hook  pull_and_update.sh  update_site.sh
docs/: architecture.md  endpoints.md  requirements.txt
nginx/: nginx.conf  pincerna_auth.conf.example
services/api/: Cargo.toml  allowed_users.json  app.cpp  app.py  requirements.system.txt  requirements.txt
services/api/src/: main.rs
services/ui/: app.js  auth.html  auth.js  boot.js  hls.min.js  index.html  player.html  shim.js  styles.css  styles2.css  styles_sec.css
