[package]
name = "pincerna-api"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "pincerna_api"
path = "src/main.rs"

[dependencies]
actix-web = "4"
actix-rt = "2"
actix-multipart = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
jsonwebtoken = "9"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hmac = "0.12"
base64 = "0.22"
rand = "0.8"
log = "0.4"
env_logger = "0.11"
sysinfo = "0.31"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
sanitize-filename = "0.6"
mime_guess = "2"
urlencoding = "2"
percent-encoding = "2"
hostname = "0.4"

[profile.release]
opt-level = 2
lto = true
